# vuln-rust-project

./: Cargo.toml  README.md
.github/workflows/: main-ci.yml  rust-scanner.yml
src/: main.rs
