[package]
name = "vulnerable_rust_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] } # SQLite for SQLi
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] } # SSRF
tera = "1.19" # Template Engine for XSS 